crates/tokmd-types/tests/snapshots/snapshots__token_audit.snap
---
source: crates/tokmd-types/tests/snapshots.rs
expression: audit
---
{
  "output_bytes": 10000,
  "tokens_min": 2000,
  "tokens_est": 2500,
  "tokens_max": 3334,
  "overhead_bytes": 2000,
  "overhead_pct": 0.2
}
