crates/tokmd-types/tests/snapshots/snapshots__tool_info_default.snap
---
source: crates/tokmd-types/tests/snapshots.rs
expression: info
---
{
  "name": "",
  "version": ""
}
