crates/tokmd-types/tests/snapshots/snapshots__totals.snap
---
source: crates/tokmd-types/tests/snapshots.rs
expression: totals
---
{
  "code": 10000,
  "lines": 15000,
  "files": 100,
  "bytes": 500000,
  "tokens": 125000,
  "avg_lines": 150
}
